--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "A simple todo list app built with React, Redux and Webpack",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-register --recursive",
+    "test:watch": "npm test -- --watch",
     "serve": "nodemon server/server.js"
   },
   "repository": {
@@ -25,5 +26,14 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "webpack": "^1.12.13"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.9.0",
+    "enzyme": "^2.3.0",
+    "expect": "^1.20.1",
+    "mocha": "^2.5.3",
+    "react": "^0.14.8"
   }
 }
