--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "enzyme": "^2.3.0",
     "expect": "^1.20.1",
     "mocha": "^2.5.3",
-    "react": "^0.14.8"
+    "react": "^0.14.8",
+    "react-addons-test-utils": "^15.1.0"
   }
 }
